--- a/app.wxss
+++ b/app.wxss
@@ -3,5 +3,10 @@
 
 .container {
   width: 100vw;
-  height: 100vh;  
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
