--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,16 +1,28 @@
 <!--pages/index/index.wxml-->
 <view class="container">
-  <!-- 搜索部分 -->
-  <view class="page__bd">
-      <mp-searchbar bindselectresult="selectResult"></mp-searchbar>
-  </view>
-  <!-- 通知 -->
-  <view class="notice">
-    <image class="notice_icon" src="/images/common/notice.png"></image>
-    <swiper class="notice_swiper">
-        <swiper-item class="notice_swiper_item">
-            <text>111112233111112233111112233111112233111112233111112233aaaassss</text>
-        </swiper-item>
-    </swiper>
-  </view>
+    <!-- 搜索部分 -->
+    <view class="page__bd">
+        <mp-searchbar bindselectresult="selectResult"></mp-searchbar>
+    </view>
+
+    <!-- 通知 -->
+    <view class="notice" wx:if="{{noticeList.length > 0}}">
+        <image class="notice_icon" src="/images/common/notice.png"></image>
+        <swiper class="notice_swiper" autoplay="true" interval="3000" circular="true" vertical="true">
+            <swiper-item class="notice_swiper_item" wx:for="{{noticeList}}" wx:key="id">
+                <text>{{item.title}}</text>
+            </swiper-item>
+        </swiper>
+    </view>
+
+    <!-- 商品类别 -->
+    <view class="goodsCategory_box" wx:if="{{goodsCategory.length > 0}}">
+        <view class="" wx:for="{{goodsCategory}}" wx:key="id">
+            <view class="goodsCategory_item">
+                <image class="goodsCategory_item_icon" src="{{item.icon}}"></image>
+                <text class="goodsCategory_item_text">{{item.name}}</text>
+            </view>
+        </view>
+    </view>
+
 </view>
