--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,24 +1,64 @@
 /* pages/index/index.wxss */
+
 .page__bd {
     width: 100%;
 }
+
 .notice {
     display: flex;
     height: 80rpx;
     line-height: 80rpx;
 }
+
 .notice_icon {
     width: 30rpx;
     height: 30rpx;
     margin-top: 25rpx;
     margin-left: 25rpx;
 }
+
 .notice_swiper {
     width: 680rpx;
     margin-left: 15rpx;
     height: 80rpx;
     line-height: 80rpx;
 }
-.notice_swiper_item {
 
+.notice_swiper_item {
+    color: #e64340;
+    padding-left: 10rpx;
+    width: 680rpx;
+    height: 80rpx;
+    line-height: 80rpx;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* letter-spacing: 10rpx; */
+}
+
+.goodsCategory_box {
+    width: 750rpx;
+    height: 300rpx;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+.goodsCategory_item {
+    width: 150rpx;
+    height: 150rpx;
+    box-sizing: border-box;
+    padding: 25rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.goodsCategory_item_icon {
+    width: 70rpx;
+    height: 70rpx;;
+}
+.goodsCategory_item_text {
+    width: 100rpx;
+    height: 30rpx;
+    text-align: center;
 }
