--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -105,3 +105,74 @@
     float: left;
     margin: 19.5rpx 15rpx;
 }
+
+.goods_container {
+    width: 750rpx;
+    background-color: #efefef;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.goods_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10rpx;
+    margin: 10rpx 10rpx 0;
+    padding: 10rpx;
+    border: 1px solid #f4f4f4;
+    width: 345rpx;
+    box-sizing: border-box;
+}
+
+.goods_img_box {
+    width: 340rpx;
+    height: 300rpx;
+    padding: 0 0 15rpx 0;
+}
+
+.goods_img {
+    width: 100%;
+    height: 100%;
+}
+
+.goods_title {
+    width: 340rpx;
+    height: 40rpx;
+    line-height: 40rpx;
+    font-size: 24rpx;
+    color: #333;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-left: 15rpx;
+    box-sizing: border-box;
+}
+
+.goods_price {
+    width: 340rpx;
+    display: flex;
+    flex-direction: row;
+    height: 40rpx;
+    line-height: 40rpx;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20rpx 0 10rpx;
+    margin-top: 10rpx;
+    box-sizing: border-box;
+}
+
+.goods_price_current {
+    color: #f40;
+    font-size: 28rpx;
+}
+
+.goods_price_original {
+    color: #999;
+    font-size: 24rpx;
+    text-decoration: line-through #999;
+}
