--- a/pages/start/start.wxss
+++ b/pages/start/start.wxss
@@ -1,26 +1,34 @@
 /* pages/start/start.wxss */
+
+.container {
+    width: 100vw;
+    height: 100vh;
+}
+
 .swiper-box {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
+
 .swiper {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
+
 .swiper-image {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .btn-box {
-  width: 100%;
-  position: fixed;
-  bottom: 60rpx;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-items: center;
+    width: 100%;
+    position: fixed;
+    bottom: 60rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
 }
+
 .btn {
-  
 }
