--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -141,7 +141,7 @@
 }
 
 .goods_title {
-    width: 340rpx;
+    width: 100%;
     height: 40rpx;
     line-height: 40rpx;
     font-size: 24rpx;
@@ -154,7 +154,7 @@
 }
 
 .goods_price {
-    width: 340rpx;
+    width: 100%;
     display: flex;
     flex-direction: row;
     height: 40rpx;
@@ -186,4 +186,44 @@
 
 .loadmore_text {
     text-align: center;
+}
+
+.kanjia_container {
+    display: flex;
+    flex-direction: column;
+    background-color: #efefef;
+}
+
+.kanjia_title_box {
+    padding: 20rpx;
+    font-size: 28rpx;
+    font-weight: bold;
+    background-color: #fff;
+}
+
+.kanjia_title_line {
+    margin-top: 20rpx;
+    padding-top: 1rpx;
+    background-color: #eee;
+}
+
+.kanjia_box {
+    display: flex;
+    flex-direction: row;
+    padding: 0 10rpx 20rpx;
+    background-color: #fff;
+}
+
+.kanjia_last_box {
+    margin-bottom: 20rpx;
+}
+
+.kanjia_icon_box {
+    width: 200rpx;
+    height: 200rpx;
+}
+
+.kanjia_icon {
+    width: 100%;
+    height: 100%;
 }
