--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -154,9 +154,9 @@
 }
 
 .goods_price {
-    width: 100%;
     display: flex;
     flex-direction: row;
+    width: 100%;
     height: 40rpx;
     line-height: 40rpx;
     justify-content: space-between;
@@ -191,31 +191,22 @@
 .kanjia_container {
     display: flex;
     flex-direction: column;
-    background-color: #efefef;
-}
-
-.kanjia_title_box {
-    padding: 20rpx;
-    font-size: 28rpx;
-    font-weight: bold;
     background-color: #fff;
 }
 
-.kanjia_title_line {
-    margin-top: 20rpx;
-    padding-top: 1rpx;
-    background-color: #eee;
+.kanjia_title_box {
+    padding: 15rpx 20rpx;
+    font-size: 28rpx;
+    font-weight: bold;
 }
 
 .kanjia_box {
     display: flex;
-    flex-direction: row;
-    padding: 0 10rpx 20rpx;
+    flex-direction: row;    
+    margin: 0 20rpx;
+    padding: 20rpx 0;
     background-color: #fff;
-}
-
-.kanjia_last_box {
-    margin-bottom: 20rpx;
+    border-top: 1rpx solid #eee;
 }
 
 .kanjia_icon_box {
@@ -227,3 +218,34 @@
     width: 100%;
     height: 100%;
 }
+
+.kanjia_item_box {
+    flex: 1;
+    overflow: hidden;
+    margin: 0 0 0 10rpx;
+}
+
+.kanjia_item_title {
+    height: 40rpx;
+    line-height: 40rpx;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 28rpx;
+}
+.kanjia_item_desc {
+    height: 100rpx;
+    font-size: 24rpx;
+    color: #999;
+}
+.kanjia_item_price {
+    display: flex;
+    flex-direction: row;
+}
+.kanjia_btn {
+    font-size: 24rpx;
+    width: 120rpx;
+    color: #fff;
+    background-color: #e64340;
+}
+
