--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -123,7 +123,7 @@
     background-color: #fff;
     border-radius: 10rpx;
     margin: 10rpx 10rpx 0;
-    padding: 10rpx;
+    padding: 20rpx;
     border: 1px solid #f4f4f4;
     width: 345rpx;
     box-sizing: border-box;
@@ -149,7 +149,6 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding-left: 15rpx;
     box-sizing: border-box;
 }
 
@@ -161,7 +160,7 @@
     line-height: 40rpx;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20rpx 0 10rpx;
+    padding-right: 20rpx;
     margin-top: 10rpx;
     box-sizing: border-box;
 }
@@ -202,7 +201,7 @@
 
 .kanjia_box {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
     margin: 0 20rpx;
     padding: 20rpx 0;
     background-color: #fff;
@@ -233,15 +232,18 @@
     text-overflow: ellipsis;
     font-size: 28rpx;
 }
+
 .kanjia_item_desc {
     height: 100rpx;
     font-size: 24rpx;
     color: #999;
 }
+
 .kanjia_item_price {
     display: flex;
     flex-direction: row;
 }
+
 .kanjia_btn {
     font-size: 24rpx;
     width: 120rpx;
@@ -249,3 +251,41 @@
     background-color: #e64340;
 }
 
+.pintuan_container {
+    background-color: #efefef;
+}
+
+.pintuan_box {
+    display: flex;
+    flex-direction: column;
+    margin: 10rpx 10rpx 0;
+    padding: 20rpx;
+    background-color: #fff;
+    border-radius: 8rpx;
+}
+
+.pintuan_img_box {
+    width: 100%;
+    height: 300rpx;
+}
+
+.pintuan_img {
+    width: 100%;
+    height: 100%;
+}
+
+.pintuan_item_title {
+    font-size: 28rpx;
+    font-weight: bold;
+    color: #333;
+}
+
+.pintuan_item_desc {
+    color: #999;
+    font-size: 24rpx;
+}
+
+.pintuan_item_price {
+    display: flex;
+    flex-direction: row;
+}
