--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -1,1 +1,105 @@
 /* pages/category/category.wxss */
+page {
+  height: 100%;
+  overflow: hidden;
+}
+.container {
+  height: 100%;
+  overflow: hidden;
+}
+.content_container {
+    display: flex;
+    flex-direction: row;
+    border-top: 1rpx solid #efefef;
+    width: 100vw;
+    height: 100vh;
+}
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 32rpx;
+}
+.price {
+    color: #f40;
+}
+.weight {
+    font-weight: bold;
+}
+.nav_container {
+    width: 200rpx;
+    background-color: #efefef;
+}
+.nav_item {
+    width: 100%;
+    height: 100rpx;
+    line-height: 100rpx;
+    text-align: center;
+    color: #333;
+}
+.nav_item_active {
+    background-color: #fff;
+    border-left: 4rpx solid red;
+}
+
+.item_container {
+    background-color: #f4f4f4;
+    width: 550rpx;
+}
+.item_title {
+    background-color: rgba(216, 30, 6, 0.3);
+    font-size: 24rpx;
+    color: #333;
+    height: 40rpx;
+    line-height: 40rpx;
+    text-align: center;
+}
+.item_box {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1rpx solid #efefef;
+}
+.item_icon_box {
+    width: 160rpx;
+    height: 160rpx;
+    margin: 20rpx;
+}
+
+.item_icon_box image {
+    width: 100%;
+    height: 100%;
+    background-color: #f40;
+    border-radius: 8rpx;
+}
+.item_desc_box {
+    margin: 25rpx 20rpx 15rpx 0;
+    width: 330rpx;
+}
+.item_desc {
+    height: 50rpx;
+    line-height: 50rpx;
+}
+.item_desc_box2 {
+    height: 60rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.item_desc_yishou_box {
+    width: 50%;
+    text-align: left;
+    font-size: 24rpx;
+}
+.item_desc_yishou {
+    color: #f40;
+    border: 1rpx solid #f40;
+    border-radius: 5px;
+    padding: 2rpx 4rpx;
+}
+.item_desc_pingjian_box {
+    width: 50%;
+    text-align: right;
+    font-size: 24rpx;
+}
+
