--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -69,7 +69,7 @@ page {
 .item_icon_box image {
     width: 100%;
     height: 100%;
-    background-color: #f40;
+    /* background-color: #f40; */
     border-radius: 8rpx;
 }
 .item_desc_box {
@@ -103,3 +103,12 @@ page {
     font-size: 24rpx;
 }
 
+.loadmore_box {
+    padding: 15rpx 0;
+    color: #999;
+    font-size: 24rpx;
+}
+
+.loadmore_text {
+    text-align: center;
+}
