--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,6 @@
 <!--pages/my/my.wxml-->
+<import src="/template/login/login.wxml" />
+
 <text>pages/my/my.wxml</text>
+
+<template is="login" data="{{foo: 'bar'}}"></template>
