--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,6 +1,71 @@
 <!--pages/my/my.wxml-->
 <import src="/template/login/login.wxml" />
 
-<text>pages/my/my.wxml</text>
+<view class="container">
+    <!-- 用户信息 -->
+    <view class="userinfo">
+        <image class="userinfo_icon" src="/images/my/nologin.png"></image>
+        <button class="login_btn" size="mini" plain="true">点击登录账户</button>
+    </view>
+    <!-- 资产 -->
+    <view class="asset">
+        <view class="asset_item border_right">
+            <view>0</view>
+            <view>余额</view>
+        </view>
+        <view class="asset_item border_right">
+            <view>0</view>
+            <view>冻结</view>
+        </view>
+        <view class="asset_item">
+            <view>0</view>
+            <view>积分</view>
+        </view>
+    </view>
+
+    <!-- 我的订单 -->
+    <view style="background-color: #eee; padding-top: 10rpx"></view>
+    <view class="order">
+        <navigator hover-stay-time="200" url="">
+            <view class="order_title">我的订单</view>
+        </navigator>
+        <view class="order_items">
+            <view class="order_item">
+                <image class="order_item_icon" src="/images/my/topay.png"></image>
+                <view class="order_item_text">待付款</view>
+            </view>
+            <view class="order_item">
+                <image class="order_item_icon" src="/images/my/fahuo.png"></image>
+                <view class="order_item_text">待发货</view>
+            </view>
+            <view class="order_item">
+                <image class="order_item_icon" src="/images/my/shouhuo.png"></image>
+                <view class="order_item_text">待收货</view>
+            </view>
+            <view class="order_item">
+                <image class="order_item_icon" src="/images/my/pj.png"></image>
+                <view class="order_item_text">待评价</view>
+            </view>
+            <view class="order_item">
+                <image class="order_item_icon" src="/images/my/shouhou.png"></image>
+                <view class="order_item_text">退款/售后</view>
+            </view>
+        </view>
+    </view>
+    
+    <!-- 广告 -->
+    <ad unit-id="adunit-588264b3e2362e1e"></ad>
+
+    <!--  -->
+    <view style="background-color: #eee; padding-top: 15rpx;"></view>
+    <navigator hover-stay-time="200">
+        <view class="my_item">资金明细</view>
+    </navigator>
+    <view style="background-color: #eee; padding-top: 15rpx;"></view>
+    <navigator hover-stay-time="200">
+        <view class="my_item">资金明细</view>
+    </navigator>
+
+</view>
 
 <template is="login" data="{{foo: 'bar'}}"></template>
